# cloudwrap

./: .gitignore  .travis.yml  Cargo.toml  README.md  arch_triple.sh  version.sh
ci/: build_apk.sh  build_tar.sh  homebrew.rb  homebrew_formula.rb
src/: cli.yml  config.rs  error.rs  main.rs  output.rs  secretsmanager.rs  ssm.rs
