[package]
name = "cloudwrap"
version = "0.0.1"
authors = ["Stephen Cirner <scirner22@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/scirner22/cloudwrap"
homepage = "https://github.com/scirner22/cloudwrap"
description = """
Wrapper utility that injects configuration fields into an executable command.
"""

[dependencies]
chrono = "0.4"
clap = { version = "2.31", features = ["yaml"] }
prettytable-rs = "0.6"
rusoto_core = { git = "https://github.com/rusoto/rusoto", branch = "master" }
rusoto_ssm = { git = "https://github.com/rusoto/rusoto", branch = "master" }
rusoto_secretsmanager = { git = "https://github.com/rusoto/rusoto", branch = "master" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
